web/themes/custom/taylorwills/src/scss/modules/_header.scss
header {
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: 10;

  .header-button {
    appearance: none;
    background: unset;
    background-image: url('../images/menu.svg');
    border: 0;
    filter: drop-shadow(4px 4px $darkest-green);
    padding: 0;
    position: absolute;
    top: $sm-space;
    right: $sm-space;
    height: 6rem;
    width: 6rem;
    transition: all .5s ease;

    &.open {
      background: unset;
      background-image: url('../images/menu-close.svg');
      filter: unset;
      z-index: 10;  

      &:hover {
        filter: drop-shadow(4px 4px $darkest-green);
      }
    }

    &:hover {
      cursor: pointer;
      filter: drop-shadow(4px 4px $green);
    }
  }
  
  .header-container {
    align-items: center;
    background-color: $light-green;
    display: flex;
    height: 10rem;
    position: absolute;
    top: 0;
    opacity: 0;
    left: 100%;
    right: 0;
    transition: all .5s ease;
    visibility: hidden;

    &.open {
      opacity: 1;
      visibility: visible;
      right: 0;
      left: 0;
    }

    .menus {
      padding: 0 1.5rem;
      margin: 0 auto;
      max-width: 75rem;
      width: 100%;
    }
  
    #block-taylorwills-main-menu ul {
      display: flex;
      align-items: center;
  
      li {
        border-bottom: 2px solid transparent;
        padding: 1rem .5rem;
        transition: all .5s ease;

        &:hover {
          border-bottom-color: $green;
          cursor: pointer;

          a {
            color: $green;
          }
        }

        a {
          color: $darkest-green;
          transition: all .5s ease;
          font-size: 18px;
        }
      }
    }

    #block-taylorwills-socialmenu {
      li {
        &:hover {
          background-color: $darkest-green;

          a {
        
            &[href*=codepen] {
              background-image: url('../images/codepen.svg');
            }
    
            &[href*=drupal] {
              background-image: url('../images/drupal.svg');
            }
    
            &[href*=github] {
              background-image: url('../images/github.svg');
            }
    
            &[href*=glitch] {
              background-image: url('../images/glitch.svg');
            }
    
            &[href*=linkedin] {
              background-image: url('../images/linkedin.svg');
            }
          }
        }

        a {
        
          &[href*=codepen] {
            background-image: url('../images/codepen-header.svg');
          }
  
          &[href*=drupal] {
            background-image: url('../images/drupal-header.svg');
          }
  
          &[href*=github] {
            background-image: url('../images/github-header.svg');
          }
  
          &[href*=glitch] {
            background-image: url('../images/glitch-header.svg');
          }
  
          &[href*=linkedin] {
            background-image: url('../images/linkedin-header.svg');
          }
        }
      }
    }
  }
}

